- NEW COMMAND: $inspect
    - $inspect allows moderators (anyone with the ban members permission) to view a list of 
        past punishments for users in the server. This will display all reasons for warnings, kicks, 
        and/or bans, up to 15 results. This ONLY works if you warn/kick/ban the user with Kaguya 
        using $kick/$ban, NOT through Discord itself.
- $warn now takes in an optional reason as a parameter. If no reason is specified with the warning,
    it will default to "No reason specified."
    - Note: The warn reason is DM'd to users.
- Fixed a bug with $kick where the entire reason would not be saved (only the first word).
- Refactored the osu! module's code which should improve performance. (@CakeAndBanana)
- If a user gets banned, but wasn't banned through Kaguya, the ban reason will default to 
    "No reason specified." Instead of "``" .
    (If you want ban reasons to show in the log, they must be banned with Kaguya!)
- Guild names will now be properly stored when Kaguya joins a new guild.
- Same for usernames ^
- Total command count is now logged for all servers.
- $stats no longer shows the bot's CPU usage (it was consistently wrong).
- $osutop will now show how long ago the play was made (requested by Mr. Giroux#1784)
- $osutop is now limited to 7 requests at a time (was 10).
- Fixed some missing emotes in the osu! beatmap link parser.
- Fixed a bug where users who were muted with a set duration would never be unmuted. 
    (Unmute times are now accurate to 2.5 seconds)

Version 1.31.1

- Kaguya will no longer automatically disconnect as soon as a queue has finished.
- Kaguya will now successfully automatically play all songs in a playlist, instead of completely stopping after the first song in the queue.

Version 1.31

- Fixed a bug with $weekly where all critical chances were -1% from what they should have been.
- Added a lot of help commands that were missing for owner specific commands.